--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "0.74.5",
+    "react-native-snap-carousel": "^3.9.1",
     "watchman": "^1.0.0"
   },
   "devDependencies": {
