--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "18.2.0",
     "react-native": "0.74.5",
     "react-native-snap-carousel": "^3.9.1",
+    "react-native-video": "^6.6.2",
     "watchman": "^1.0.0"
   },
   "devDependencies": {
